[gd_scene load_steps=9 format=3 uid="uid://b24imwqmcubam"]

[ext_resource type="Script" uid="uid://cpeqkfw7h7pal" path="res://prima_stanza/prima_stanza.gd" id="1_w0utg"]
[ext_resource type="Texture2D" uid="uid://c8l6uwp1nrwrv" path="res://Bedroom.png" id="2_cm4uq"]
[ext_resource type="AudioStream" uid="uid://bwhoio0enhftv" path="res://prima_stanza/heart-monitor-beep-96554 (mp3cut.net).mp3" id="2_w0utg"]
[ext_resource type="PackedScene" uid="uid://c8yx2g6fxvmys" path="res://prima_stanza/prima_stanza3d.tscn" id="4_xuvc1"]

[sub_resource type="Animation" id="Animation_662qm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_wtxkd"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w0utg"]
_data = {
&"RESET": SubResource("Animation_662qm"),
&"fade_in": SubResource("Animation_wtxkd")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_xuvc1"]
viewport_path = NodePath("SubViewport")

[node name="Prima_scena" type="Node2D"]
script = ExtResource("1_w0utg")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(647, 505)
size_2d_override_stretch = true

[node name="Prima_stanza" parent="SubViewport" instance=ExtResource("4_xuvc1")]

[node name="Bedroom" type="Sprite2D" parent="."]
visible = false
position = Vector2(322, 252)
texture = ExtResource("2_cm4uq")

[node name="Fade_in" type="ColorRect" parent="."]
visible = false
offset_right = 1152.0
offset_bottom = 652.0
color = Color(0, 0, 0, 1)

[node name="fade_in" type="AnimationPlayer" parent="Fade_in"]
libraries = {
&"": SubResource("AnimationLibrary_w0utg")
}

[node name="Bip_bip_hospital" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_w0utg")
volume_db = -30.0
pitch_scale = 0.6
autoplay = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(321, 254)
texture = SubResource("ViewportTexture_xuvc1")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -2
offset_right = 645.0
offset_bottom = 499.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[connection signal="finished" from="Bip_bip_hospital" to="." method="_on_audio_stream_player_finished"]
